--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: "Darker Grotesque", sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
