--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  bottom: -150px;
+  bottom: -110px;
   left: 0;
   width: 100%;
   padding: 20px;
@@ -63,4 +63,19 @@ span {
 
 .EarlyTimer span {
   font-size: 66px;
+}
+
+/* Mobile*/
+@media only screen and (max-width: 600px) {
+  .music-section {
+    bottom: -100px;
+  }
+
+  span {
+    font-size: 28px;
+  }
+
+  .EarlyTimer span {
+    font-size: 40px;
+  }
 }
